Tracker: Enable/disable New Folder/Templates on UpdateMenu()

Fixes #18975

Change-Id: Icbcf4bb95a999bdf7ce0afed2051c2d3cfb59971
Reviewed-on: https://review.haiku-os.org/c/haiku/+/8002
Haiku-Format: Haiku-format Bot <no-reply+haikuformatbot@haiku-os.org>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>
Reviewed-by: waddlesplash <waddlesplash@gmail.com>
(cherry picked from commit 8717bb87dd77b5d6beb9376c31a806da6b83f31f)
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7994